# gcsfs

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  benchmark_check_perf.py  cloudbuild.yaml  core.py  environment_gcsfs.yaml  expected_durations.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_dummy.py  versioneer.py
.github/: .codecov.yml
.github/release/: prepare_release.py  test_prepare_release.py
.github/workflows/: build-and-release.yml  ci.yml  conditional.yaml  perf.yaml  pypipublish.yml  release-on-merge.yml  release-preparation.yml  release.yml  wait_for_cloud_build.sh
cloudbuild/: benchmarks-cloudbuild.yaml  cleanup.sh  create_buckets.sh  create_resources.sh  create_vm.sh  e2e-tests-cloudbuild.yaml  perf.yaml  run_benchmarks.sh  run_tests.sh  setup_vm.sh  wait_for_ssh.sh
cloudbuild/benchmarks/: README.md  benchmarks-cloudbuild.yaml  benchmarks-ingestion-cloudbuild.yaml  benchmarks-schema.json  benchmarks_schema.json  ingest.sql
cloudbuild/macrobenchmarks/: README.md  ingest.sql  macrobenchmarks-cloudbuild.yaml  macrobenchmarks-ingestion-cloudbuild.yaml  macrobenchmarks_schema.json
cloudbuild/macrobenchmarks/metrics/: calculate.py  monitoring.py  raw_store.py  requirements.txt  schema.py  sizes.py  stats.py  summary_schema.py
cloudbuild/macrobenchmarks/scripts/: check_failure.sh  cleanup_cluster.sh  cleanup_helm.sh  cleanup_leaked_resources.sh  create_buckets.sh  create_cluster.sh  delete_buckets.sh  init_variables.sh  lib.sh  run_workload.sh  scrape_metrics.sh  seed_checkpoint.sh
cloudbuild/subsystembenchmarks/: README.md  ingest.sql  subsystembenchmarks-cloudbuild.yaml  subsystembenchmarks-ingestion-cloudbuild.yaml  subsystembenchmarks_schema.json
cloudbuild/subsystembenchmarks/scripts/: run-benchmarks.sh  setup.sh  upload-results.sh
docs/: Makefile  environment.yml  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  developer.rst  fuse.rst  hns_buckets.rst  index.rst  prefetcher.rst  rapid_storage_support.rst  release.rst  retries.rst
gcsfs/: __init__.py  _dircache.py  _version.py  auth.py  caching.py  checkers.py  concurrency.py  core.py  credentials.py  dask_link.py  extended_gcsfs.py  gcs_adapter.py  gcs_fuse.py  gcs_hns_filesystem.py  gcsfilesystem_adapter.py  gcsfs_adapter.py  gcsfuse.py  inventory_report.py  mapping.py  prefetcher.py  retry.py  utils.py  zb_hns_utils.py  zonal.py  zonal_file.py  zonal_handler.py  zonalfilesystem.py
gcsfs/cli/: gcsfuse.py
gcsfs/tests/: conftest.py  fake-secret.json  fake-service-account-credentials.json  hns_ls_integration_test.py  settings.py  test_async_gcsfs.py  test_caching.py  test_checkers.py  test_concurrency.py  test_core.py  test_core_versioned.py  test_credentials.py  test_dircache.py  test_extended_gcsfs.py  test_extended_gcsfs_unit.py  test_extended_hns_gcsfs.py  test_fuse.py  test_gcsfs_adapter.py  test_init.py  test_inventory_report.py  test_inventory_report_listing.py  test_ls_hns_integration.py  test_manyopens.py  test_mapping.py  test_multi_upload.yaml  test_prefetcher.py  test_retry.py  test_simple.yaml  test_simple_upload.yaml  test_utils.py  test_zb_hns_utils.py  test_zonal_file.py  utils.py
gcsfs/tests/derived/: gcsfs_fixtures.py  gcsfs_test.py
gcsfs/tests/integration/: test_async_gcsfs.py  test_extended_hns.py
gcsfs/tests/recordings/: test_GoogleCredentials_None.yaml  test_array.yaml  test_attrs.yaml  test_bad_open.yaml  test_bigger_than_block_read.yaml  test_bytearray.yaml  test_cat_file.yaml  test_clear_empty.yaml  test_complex_keys.yaml  test_copy.yaml  test_copy_errors.yaml  test_copy_recursive.yaml  test_current.yaml  test_default_gcsfilesystem.yaml  test_du.yaml  test_errors.yaml  test_file_access.yaml  test_file_info.yaml  test_find_with_prefix_partial_cache.yaml  test_flush.yaml  test_fuse.yaml  test_gcs_glob.yaml  test_get_put.yaml  test_get_put_file_in_dir.yaml  test_get_put_recursive.yaml  test_info.yaml  test_iterable.yaml  test_large_upload.yaml  test_list_bucket_multipage.yaml  test_ls.yaml  test_ls2.yaml  test_ls_detail.yaml  test_ls_prefix_cache.yaml  test_ls_touch.yaml  test_many_connect.yaml  test_many_connect_new.yaml  (+48 more)
(+128 files in other folders)
